src/scss/_utilities.scss
@use "variables";
@use "fonts";

.container {
  margin: 0 auto;
  max-width: var(--container-max-width);
  width: var(--container-width);
}

.row {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.accent-text {
  color: var(--accent-color);
}

.btn {
  @include fonts.textpreset4;
  border-radius: var(--spacing-xs);
  border: 1px solid transparent;
  cursor: pointer;
  display: inline-block;
  font-weight: 700;
  padding: var(--spacing-md);
  text-decoration: none;

  &--primary {
    background-color: var(--bg-color-dark);
    color: var(--text-color-light);

    &:hover {
      background-color: var(--bg-color-medium);
    }
  }

  &--secondary {
    background-color: var(--bg-color);
    color: variables.$grey-900;

    &:hover {
      background-color: variables.$white;
      border-color: var(--border-color);
    }
  }

  &--destroy {
    background: variables.$red;
    color: variables.$white;
    &:hover {
      background:
        linear-gradient(
          0deg,
          rgba(255, 255, 255, 0.2) 0%,
          rgba(255, 255, 255, 0.2) 100%
        ),
        variables.$red;
    }
  }

  &--pagination {
    align-items: center;
    background: none;
    border-color: var(--border-color);
    display: inline-flex;
    gap: var(--spacing-md);
    height: var(--spacing-xxxl);
    justify-content: center;

    &:hover {
      background: variables.$biege-500;
      color: var(--text-color-light);
      svg * {
        fill: var(--text-color-light);
      }
    }

    &.active {
      background: var(--bg-color-dark);
      color: var(--text-color-light);
    }
  }
}

.btn--tertiary {
  @include fonts.textpreset4;
  align-items: center;
  background: none;
  border: none;
  color: variables.$grey-500;
  cursor: pointer;
  display: inline-flex;
  gap: var(--spacing-sm);
  text-decoration: none;
  &:hover {
    color: variables.$grey-900;
    svg * {
      fill: variables.$grey-900;
    }
  }
}

.card {
  flex: 1;
  background-color: var(--card-bg);
  border-radius: var(--spacing-sm);

  display: flex;
  flex-direction: column;
  gap: var(--spacing-sm);
  padding: var(--card-padding);

  &__title-row {
    align-items: center;
    display: flex;
    justify-content: space-between;
  }
}

.card-container {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-sm);
  width: 100%;
}

.dark-bg {
  background-color: var(--bg-color-dark);
  color: var(--text-color-light);

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: var(--text-color-medium);
  }
}

.large-text {
  @include fonts.textpreset1;
}

.light-text {
  @include fonts.textpreset5;
  color: variables.$grey-500;
}

.red-text {
  color: variables.$red;
}

.divider {
  height: 1px;
  background-color: variables.$grey-100;
}

.dropdown {
  &-container {
    align-items: center;
    display: flex;
    gap: var(--spacing-xs);
  }
  position: relative;

  &__label {
    color: variables.$grey-500;
    display: none;
  }

  &__btn {
    background: none;
    border: none;
    cursor: pointer;
    & > * {
      display: none;
    }
    .mobile-icon {
      display: block;
      height: 20px;
      width: 20px;
      svg {
        width: 100%;
        height: auto;
      }
    }

    &::after {
      //needed to maintain hover state when going between button and menu
      content: "";
      cursor: pointer;
      position: absolute;
      top: 100%;
      right: 0;
      width: 100%;
      height: var(--spacing-md); //must be same as menus top offset
      background: transparent;
      z-index: 1;
    }
  }

  &__divider {
    width: 100%;
  }

  &__menu {
    align-items: flex-start;
    background: variables.$white;
    border-radius: var(--spacing-xs);
    box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.25);
    display: none;
    flex-direction: column;
    gap: var(--spacing-sm);
    right: 0;
    padding: var(--spacing-sm) var(--spacing-lg);
    position: absolute;
    top: calc(100% + var(--spacing-md));
  }

  &__option {
    &.selected {
      font-weight: 700;
    }
  }

  &__btn:hover + .dropdown__menu,
  &__menu:hover {
    display: flex;
  }
}

.input-row {
  align-items: center;
  display: flex;
  gap: var(--spacing-xl);
  justify-content: flex-end;

  .search-bar {
    flex: 1;
    position: relative;

    input {
      padding-right: calc(var(--spacing-lg) + calc(2 * var(--spacing-md)));
      width: 100%;
      color: red;
    }

    input::placeholder {
      // TODO: fix textoverflow to elipsis
      @include fonts.textpreset4;
      color: variables.$biege-500;
    }

    svg {
      position: absolute;
      right: var(--spacing-lg);
      top: 50%;
      transform: translateY(-50%);
    }
  }
}

@media (min-width: 48rem) {
  .card-container {
    flex-direction: row;
    gap: var(--spacing-xxl);
  }

  .card {
    padding: var(--spacing-xxl);
  }

  .dropdown {
    &__label {
      display: block;
    }

    &__btn {
      align-items: center;
      background: variables.$white;
      border: 1px solid var(--border-color);
      border-radius: var(--spacing-xs);
      display: flex;
      gap: var(--spacing-md);
      padding: var(--spacing-sm) var(--spacing-lg);
      position: relative;

      & > * {
        display: block;
      }
      .mobile-icon {
        display: none;
      }

      span {
        @include fonts.textpreset4;
      }
      svg {
        transition: transform 0.3 ease-in-out;
      }

      &:hover svg {
        transform: rotateZ(-180deg);
      }
    }

    &__menu {
      left: 0;
    }
  }
}

